--- a/style.css
+++ b/style.css
@@ -5,14 +5,11 @@
     src: local('Ardeco'),
     url(/fonts/Ardeco.ttf);
 }
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Ardeco', sans-serif;
-}
+
+
 
 /*start scroll*/
+
 ::-webkit-scrollbar {
     width: 1px;
     height: 1px;
@@ -24,11 +21,12 @@
   }
   .external {
     overflow: hidden;
-    height: 100vh;
+    height: 90vh;
+    padding-bottom: 150px;
   }
   
   .horizontal-scroll-wrapper {
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
     width: 100vh;
@@ -39,7 +37,7 @@
     padding: 0;
     height: 100vw;
     perspective: 1px;
-      transform-style: preserve-3d;
+    transform-style: preserve-3d;
     padding-bottom: 10rem;
   }
   .img-wrapper {
@@ -84,27 +82,13 @@
   .last {
     transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh) ;
   }
-  .scroll-info, header {
-    position: absolute;
-    left: 1rem;
-  }
   
-  
-  header {
-    bottom: 1rem;
-  }
-  .scroll-info {
-    top: 1rem;
-  }
   a {
     color: inherit;
     font-weight: 500;
     
   }
-  h1 {
-    font-weight: 300;
-    font-size: 1rem;
-  }
+  
   
   .img-wrapper a {
     overflow: hidden;
@@ -137,6 +121,10 @@
 /*end scroll*/
 
 body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ardeco', sans-serif;
     display: flex;
     min-height: 100vh;
     justify-content: flex-end;
