--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @font-face {
     font-family: 'Ardeco';
@@ -9,7 +8,13 @@
 
 
 /*start scroll*/
-
+header p.fotogallery {
+  text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 2.5em;
+    
+}
 ::-webkit-scrollbar {
     width: 1px;
     height: 1px;
@@ -20,10 +25,10 @@
     height: 1px;
   }
   .external {
-    overflow: hidden;
-    height: 90vh;
-    padding-bottom: 150px;
-  }
+/*  для теста- overflow: hidden;*/
+    height: 100vh;
+    padding-bottom: 100px;
+    }
   
   .horizontal-scroll-wrapper {
     display: grid;
@@ -38,7 +43,7 @@
     height: 100vw;
     perspective: 1px;
     transform-style: preserve-3d;
-    padding-bottom: 10rem;
+    padding-bottom: 5rem;
   }
   .img-wrapper {
     transform: rotate(90deg);
@@ -52,7 +57,7 @@
   }
   
   .img-wrapper:hover {
-   min-height: 65vh;
+   min-height: 60vh;
   }
   
   .slower {
@@ -83,13 +88,7 @@
     transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh) ;
   }
   
-  a {
-    color: inherit;
-    font-weight: 500;
-    
-  }
-  
-  
+   
   .img-wrapper a {
     overflow: hidden;
     display: block;
@@ -99,37 +98,30 @@
   }
   img {
     max-width: 45vh;
-    max-height: 50vh;
+    max-height: 45vh;
     transition: .5s;
-    vertical-align: top;
+    vertical-align:middle;
     filter: saturate(40%) sepia(30%) hue-rotate(5deg);
   }
   a:hover img {
     filter: none;
   }
-  p {
-    margin: 0;
-  }
-  .scroll-info {
-    display: flex;
-    align-items: center;
-  }
-  .icon svg {
-      width: 50px;
-      fill: currentcolor;
-  }
+  
+ 
 /*end scroll*/
 
+
+* {
+       margin: 0;
+       padding: 0;
+       box-sizing: border-box;
+       
+   } 
+
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Ardeco', sans-serif;
-    display: flex;
-    min-height: 100vh;
-    justify-content: flex-end;
-    align-items: flex-end;
-    background: rgb(215, 203, 178);
+   
+   font-family: 'Ardeco', sans-serif;
+   background: rgb(215, 203, 178);
 }
 footer {
     position: relative;
