--- a/style.css
+++ b/style.css
@@ -39,15 +39,78 @@ header {
   width: 300px;
   height: 200px;
   transition: 0.5s;
+  
 }
 
 .container .card .face.face1 {
   position: relative;
   display: flex;
+  background: #2f2815;
+  color: #fff;
   justify-content: center;
   align-items: center;
   z-index: 1;
+  transform: translateY(100px);
 }
+.container .card:hover .face.face1 {
+  transform: translateY(0);
+  background: #7e745d;
+}
+
+.container .card .face.face1 .content {
+  opacity: 0.2;
+  transition: 0.5s;
+}
+.container .card:hover .face.face1 .content {
+  opacity: 1;
+  
+}
+.container .card:hover .face.face1 .content img {
+  max-width: 100px;
+  width: 100px;
+  
+}
+.container .card:hover .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+} 
+
+.container .card .face.face2 {
+  position: relative;
+ display: flex;
+ justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 10px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(126, 116, 93, 0.8);
+  transform: translateY(-100px);
+}
+.container .card:hover .face.face2 {
+  transform: translateY(0);
+}
+.container .card .face.face2 .content p {
+  margin:0;
+  padding: 0;
+}
+
+.container .card .face.face2 .content a {
+margin: 15px 0;
+display: inline-block;
+text-decoration: none;
+font-weight: 900;
+padding: 5px;
+border: 1px solid #554c37;
+}
+
+.container .card .face.face2 .content a:hover {
+  background: #554c37;
+  color: #fff;
+}
+
 /*start scroll*/
 section p.fotogallery {
   text-align: center;
