--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ header {
   align-items: center;
 }
 .container {
-  width: 1000px;
+  width: 80%;
+  max-width: 80%;
   position: relative;
   display: flex;
   justify-content:space-between;
@@ -83,7 +84,6 @@ header {
  display: flex;
  justify-content: center;
   align-items: center;
-  color: #fff;
   padding: 10px;
   box-sizing: border-box;
   box-shadow: 0 20px 50px rgba(126, 116, 93, 0.8);
@@ -135,7 +135,7 @@ section p.fotogallery {
     }
   
   .horizontal-scroll-wrapper {
-    display: grid;
+    display: flex;
     flex-direction: column;
     align-items: center;
     width: 100vh;
