--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav.mainmenu {
 label .logo {
   width: 16%;
   max-width: 16%;
-  height: max-content;
+  height: 95%;
   padding: 0;
   
 }
@@ -76,6 +76,13 @@ nav ul li {
 }
 
 @media (max-width:700px) {
+  label.logo {
+    width: 80%;
+  max-width: 80%;
+  height: 85%;
+    padding-left: 50px;
+        }
+  
   .checkbtn {
     display: block;
     padding-left: 50px;
